--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ patternRatio: 0.80;
 <!-- Préchargement -->
 <a-assets timeout="20000">
 <!-- Mets ton vrai chemin ici -->
-<a-asset-item id="modelGLB" src="./models/gears.glb"></a-asset-item>
+<a-asset-item id="modelGLB" src="free_porsche_911_carrera_4s.glb"></a-asset-item>
 </a-assets>
 
 <!-- Lumières (rendu meilleur) -->
@@ -67,4 +67,5 @@ obj.addEventListener("model-loaded", () => console.log("✅ Model loaded"));
 obj.addEventListener("model-error", (e) => console.log("❌ Model error", e));
 </script>
 </body>
+
 </html>
