--- a/index.html
+++ b/index.html
@@ -1,71 +1,47 @@
 <!doctype html>
 <html lang="fr">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<title>AR Hiro + GLB (stable)</title>
+ <meta charset="utf-8" />
+ <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+ <title>AR Hiro + GLB</title>
 
-<!-- A-Frame -->
-<script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-<!-- AR.js (A-Frame build) -->
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+ <!-- A-Frame -->
+ <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+ <!-- AR.js -->
+ <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
-<link rel="stylesheet" href="style.css" />
+ <style>
+ html, body { width:100%; height:100%; margin:0; overflow:hidden; background:#000; }
+ </style>
 </head>
 
 <body>
-<a-scene
-embedded
-renderer="antialias: true; colorManagement: true; physicallyCorrectLights: true;"
-vr-mode-ui="enabled: false"
-device-orientation-permission-ui="enabled: true"
-arjs="
-sourceType: webcam;
-debugUIEnabled: false;
-detectionMode: mono;
-patternRatio: 0.80;
-"
->
-<!-- Préchargement -->
-<a-assets timeout="20000">
-<!-- Mets ton vrai chemin ici -->
-<a-asset-item id="modelGLB" src="free_porsche_911_carrera_4s.glb"></a-asset-item>
-</a-assets>
+ <a-scene
+ embedded
+ vr-mode-ui="enabled:false"
+ renderer="antialias:true; colorManagement:true; physicallyCorrectLights:true;"
+ arjs="sourceType:webcam; debugUIEnabled:false; detectionMode:mono; trackingMethod:best;"
+ >
+ <a-assets timeout="20000">
+ <!-- Le .glb est dans le même dossier que index.html -->
+ <a-asset-item id="car" src="free_porsche_911_carrera_4s.glb"></a-asset-item>
+ </a-assets>
 
-<!-- Lumières (rendu meilleur) -->
-<a-entity light="type: ambient; intensity: 0.9"></a-entity>
-<a-entity light="type: directional; intensity: 0.8" position="1 2 1"></a-entity>
+ <!-- Lumières -->
+ <a-entity light="type:ambient; intensity:0.9"></a-entity>
+ <a-entity light="type:directional; intensity:0.8" position="1 2 1"></a-entity>
 
-<!-- Marqueur Hiro + lissage -->
-<a-marker
-preset="hiro"
-smooth="true"
-smoothCount="10"
-smoothTolerance="0.01"
-smoothThreshold="2"
->
-<!-- Un petit “socle” pour repère (optionnel) -->
-<a-plane rotation="-90 0 0" width="1" height="1" color="#222" material="opacity:0.25"></a-plane>
+ <!-- Marqueur Hiro + lissage -->
+ <a-marker preset="hiro" smooth="true" smoothCount="12" smoothTolerance="0.01" smoothThreshold="2">
+ <a-entity
+ gltf-model="#car"
+ position="0 0 0"
+ rotation="0 0 0"
+ scale="0.01 0.01 0.01">
+ </a-entity>
+ </a-marker>
 
-<!-- Ton modèle -->
-<a-entity
-id="obj"
-gltf-model="#modelGLB"
-position="0 0 0"
-rotation="0 0 0"
-scale="0.01 0.01 0.01"
-></a-entity>
-</a-marker>
-
-<a-entity camera="near: 0.01; far: 1000"></a-entity>
-</a-scene>
-
-<script>
-// Petit check de chargement (utile pour debug)
-const obj = document.getElementById("obj");
-obj.addEventListener("model-loaded", () => console.log("✅ Model loaded"));
-obj.addEventListener("model-error", (e) => console.log("❌ Model error", e));
-</script>
+ <a-entity camera="near:0.01; far:1000"></a-entity>
+ </a-scene>
 </body>
-
 </html>
