--- a/index.html
+++ b/index.html
@@ -1,139 +1,29 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>AR Hiro - Scan Optimisé + GLB</title>
+  <link rel="stylesheet" href="style.css" />
 
-  <!-- A-Frame + AR.js + Gestures -->
-  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+
+  <!-- Import AR.js version w/ NFT but with marker + location based support -->
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
-
-  <style>
-    body { margin: 0; overflow: hidden; background:#000; }
-    #info {
-      position: absolute; left: 0; right: 0; bottom: 18px; z-index: 1000;
-      text-align: center; color: #fff; font-family: system-ui, -apple-system, Arial, sans-serif;
-      background: rgba(0,0,0,0.55); padding: 10px 12px; box-sizing: border-box;
-      pointer-events: none;
-    }
-    #hud{
-      position:absolute; top:12px; left:12px; z-index:1001;
-      background:rgba(0,0,0,.55); color:#fff; padding:8px 10px;
-      border-radius:10px; font-family:system-ui,-apple-system,Arial,sans-serif;
-      font-size:13px; line-height:1.25;
-    }
-  </style>
 </head>
 
-<body>
-  <div id="hud">📷 Initialisation caméra…</div>
-  <div id="info">🔵 Approche le marqueur Hiro (bien éclairé, bien à plat). Pince/drag/rotate sur la Porsche.</div>
+<body style="margin: 0px; overflow: hidden">
+  <a-scene embedded arjs>
+    <a-marker preset="hiro">
+      <!-- gltf-model="./models/tre/scene.gltf" -->
 
-  <a-scene
-    embedded
-    vr-mode-ui="enabled:false"
-    renderer="antialias:true; colorManagement:true; physicallyCorrectLights:true; precision:high;"
-    arjs="
-      sourceType: webcam;
-      debugUIEnabled: false;
-
-      /* Détection */
-      detectionMode: mono_and_matrix;
-      matrixCodeType: 3x3;
-      patternRatio: 0.82;
-
-      /* Qualité tracking */
-      trackingMethod: best;
-    "
-  >
-    <a-assets timeout="60000">
-      <a-asset-item id="porsche" src="free_porsche_911_carrera_4s.glb"></a-asset-item>
-      <img id="grid" src="https://cdn.aframe.io/a-painter/images/grid.png">
-    </a-assets>
-
-    <!-- Un peu de lumière pour que le modèle soit lisible -->
-    <a-entity light="type:ambient; intensity:0.95"></a-entity>
-    <a-entity light="type:directional; intensity:0.9" position="2 6 3"></a-entity>
-
-    <!-- ===== MARQUEUR HIRO (Scan + stable) ===== -->
-    <a-marker
-      id="marker"
-      preset="hiro"
-      emitevents="true"
-
-      /* LISSAGE (réduit tremblement) */
-      smooth="true"
-      smoothCount="15"
-      smoothTolerance="0.008"
-      smoothThreshold="2"
-    >
-      <a-entity id="vr-world" position="0 0 0" scale="1 1 1">
-
-        <!-- Sol semi-transparent (repère) -->
-        <a-circle radius="3" rotation="-90 0 0" position="0 0 0"
-          material="src:#grid; repeat:8 8; transparent:true; opacity:0.16; color:#4FC3F7">
-        </a-circle>
-
-        <!-- Aide visuelle : cadre autour du marker (aide à cadrer) -->
-        <a-ring radius-inner="0.42" radius-outer="0.48" rotation="-90 0 0" position="0 0.01 0"
-          material="color:#00E5FF; opacity:0.35; transparent:true">
-        </a-ring>
-
-        <!-- Porsche -->
-        <a-entity
-          id="car"
-          class="interactable"
-          gltf-model="#porsche"
-          visible="false"
-          position="0 0 0"
-          rotation="0 0 0"
-          scale="0.02 0.02 0.02"
-          gesture-handler="minScale: 0.006; maxScale: 0.12"
-        ></a-entity>
-
-        <!-- Titre -->
-        <a-text value="SCAN OK → PORSCHE" position="0 1.05 0" rotation="-90 0 0"
-          align="center" width="2" color="#FFC65D"></a-text>
-
+      <a-entity
+        position="0 0 0"
+        rotation="0 0 0"
+        scale="0.01 0.01 0.01"
+        gltf-model="../code/gears/gears.glb">
       </a-entity>
+
     </a-marker>
 
-    <!-- Caméra : near bas pour éviter clipping proche -->
-    <a-entity camera="near:0.01; far:1000"></a-entity>
+    <a-entity camera></a-entity>
   </a-scene>
-
-  <script>
-    const hud = document.getElementById('hud');
-    const marker = document.getElementById('marker');
-    const car = document.getElementById('car');
-
-    // Etat marker
-    marker.addEventListener('markerFound', () => {
-      hud.textContent = "✅ Marker détecté. Stabilisation…";
-    });
-    marker.addEventListener('markerLost', () => {
-      hud.textContent = "🔵 Cherche le marker Hiro… (plus de lumière, bien à plat)";
-    });
-
-    // Chargement modèle
-    car.addEventListener('model-loaded', () => {
-      car.setAttribute('visible', 'true');
-      hud.textContent = "✅ Modèle chargé. Pince/drag/rotate.";
-      setTimeout(() => { hud.style.display = "none"; }, 2500);
-    });
-
-    car.addEventListener('model-error', (e) => {
-      hud.textContent = "❌ Erreur GLB. Vérifie le fichier + GitHub Pages (https).";
-      console.log("model-error", e);
-    });
-
-    // Bonus: feedback tap
-    car.addEventListener('click', () => {
-      car.setAttribute('scale', '0.022 0.022 0.022');
-      setTimeout(() => car.setAttribute('scale', '0.02 0.02 0.02'), 160);
-    });
-  </script>
 </body>
 </html>
