Change glTF model to free_porsche_911_carrera_4s
Updated the glTF model in the A-Frame scene.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         position="0 0 0"
         rotation="0 0 0"
         scale="0.01 0.01 0.01"
-        gltf-model="../code/gears/gears.glb">
+        gltf-model="free_porsche_911_carrera_4s.glb">
       </a-entity>
 
     </a-marker>
@@ -27,3 +27,4 @@
   </a-scene>
 </body>
 </html>
+
