--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Porsche 911 - AR Stable & Interactive</title>
+  <title>AR </title>
 
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -21,7 +21,7 @@
 </head>
 
 <body style="margin: 0px; overflow: hidden;">
-  <div id="ui-overlay">🏎️ Porsche 911 : Pincez pour zoomer, glissez pour tourner.</div>
+  <div id="ui-overlay"> Pincez pour zoomer, glissez pour tourner.</div>
 
   <a-scene 
     embedded 
@@ -31,7 +31,7 @@
   >
 
     <a-assets>
-      <a-asset-item id="porsche-model" src="free_porsche_911_carrera_4s.glb"></a-asset-item>
+      <a-asset-item id="porsche-model" src="M1.glb"></a-asset-item>
     </a-assets>
 
     <a-marker 
@@ -67,3 +67,4 @@
   </a-scene>
 </body>
 </html>
+
