--- a/index.html
+++ b/index.html
@@ -3,52 +3,122 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>AR </title>
+  <title>AR</title>
 
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
 
   <style>
-    body { margin: 0; overflow: hidden; }
-    #ui-overlay {
-      position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%);
-      text-align: center; color: white; font-family: sans-serif;
-      background: rgba(0,0,0,0.7); padding: 12px 20px; border-radius: 25px;
-      pointer-events: none; z-index: 100; border: 1px solid #4FC3F7;
+    html, body { margin: 0; height: 100%; overflow: hidden; background: #000; }
+
+    /* UI plus lisible (pas sombre) */
+    #ui-overlay{
+      position: fixed;
+      left: 50%;
+      bottom: 18px;
+      transform: translateX(-50%);
+      z-index: 9999;
+      pointer-events: none;
+
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-size: 14px;
+      line-height: 1.2;
+      color: #0b1a24;
+
+      background: rgba(255,255,255,0.82);
+      border: 1px solid rgba(79,195,247,0.85);
+      box-shadow: 0 10px 28px rgba(0,0,0,0.35);
+      padding: 10px 14px;
+      border-radius: 999px;
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
+      text-align: center;
+      max-width: min(92vw, 520px);
+    }
+
+    #ui-overlay b { color: #006aa6; }
+
+    /* Éclaircit un peu la caméra (utile si ton environnement est sombre) */
+    #arjs-video {
+      filter: brightness(1.12) contrast(1.08) saturate(1.18);
+      -webkit-filter: brightness(1.12) contrast(1.08) saturate(1.18);
     }
   </style>
+
+  <script>
+    // Optionnel : boost léger des matériaux (si ton GLB reste sombre)
+    AFRAME.registerComponent('pbr-boost', {
+      schema: {
+        emissive: { default: 0.12 },   // 0.08 à 0.25 selon besoin
+        env: { default: 1.0 }         // intensité "simulée" (selon moteurs)
+      },
+      init() {
+        const el = this.el;
+        el.addEventListener('model-loaded', () => {
+          const obj = el.getObject3D('mesh');
+          if (!obj) return;
+
+          obj.traverse((n) => {
+            if (!n.isMesh || !n.material) return;
+
+            const mats = Array.isArray(n.material) ? n.material : [n.material];
+            mats.forEach((m) => {
+              // évite de casser les matériaux non-PBR
+              if ('emissive' in m) {
+                m.emissive.setRGB(1, 1, 1);
+                m.emissiveIntensity = Math.max(m.emissiveIntensity || 0, this.data.emissive);
+              }
+              // Force update
+              m.needsUpdate = true;
+            });
+          });
+        });
+      }
+    });
+  </script>
 </head>
 
-<body style="margin: 0px; overflow: hidden;">
-  <div id="ui-overlay"> Pincez pour zoomer, glissez pour tourner.</div>
+<body>
+  <div id="ui-overlay">🤏 <b>Pincez</b> pour zoomer · ☝️ <b>Glissez</b> pour tourner</div>
 
-  <a-scene 
-    embedded 
+  <a-scene
+    embedded
     arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; sourceWidth:1280; sourceHeight:960; displayWidth:1280; displayHeight:960;"
-    renderer="logarithmicDepthBuffer: true; antialias: true; colorManagement: true;"
+    renderer="
+      antialias: true;
+      colorManagement: true;
+      physicallyCorrectLights: true;
+      toneMapping: acesfilmic;
+      toneMappingExposure: 1.45;
+      logarithmicDepthBuffer: true;
+    "
     gesture-detector
   >
-
     <a-assets>
       <a-asset-item id="porsche-model" src="M1.glb"></a-asset-item>
     </a-assets>
 
-    <a-marker 
-      preset="hiro" 
-      id="marker" 
+    <!-- ✅ LIGHT RIG attaché à la caméra : couleurs plus visibles et stable -->
+    <a-entity camera>
+      <a-light type="ambient" color="#ffffff" intensity="1.35"></a-light>
+      <a-light type="hemisphere" color="#ffffff" groundColor="#dbe9ff" intensity="0.85"></a-light>
+
+      <!-- “Headlight” (éclaire toujours l’objet) -->
+      <a-light type="directional" color="#ffffff" intensity="1.25" position="0 1 1"></a-light>
+      <a-light type="point" color="#ffffff" intensity="0.55" distance="6" decay="2" position="0 0.8 1.2"></a-light>
+    </a-entity>
+
+    <a-marker
+      preset="hiro"
+      id="marker"
       emitevents="true"
       smooth="true"
       smoothCount="10"
       smoothTolerance="0.01"
       smoothThreshold="5"
-      raycaster="objects: .clickable"
       cursor="fuse: false; rayOrigin: mouse;"
     >
-      
-      <a-light type="ambient" color="#FFF" intensity="1"></a-light>
-      <a-light type="directional" color="#FFF" intensity="1" position="1 2 1"></a-light>
-
       <a-entity
         id="porsche-entity"
         gltf-model="#porsche-model"
@@ -56,16 +126,17 @@
         scale="1 1 1"
         class="interactable"
         gesture-handler="minScale: 0.25; maxScale: 4"
-      >
-      </a-entity>
+        pbr-boost="emissive: 0.12"
+      ></a-entity>
 
-      <a-ring color="#4FC3F7" radius-inner="0.8" radius-outer="0.9" rotation="-90 0 0" opacity="0.5"></a-ring>
-
+      <a-ring
+        color="#4FC3F7"
+        radius-inner="0.8"
+        radius-outer="0.9"
+        rotation="-90 0 0"
+        opacity="0.65"
+      ></a-ring>
     </a-marker>
-
-    <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
-
-
