--- a/index.html
+++ b/index.html
@@ -3,7 +3,92 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>AR</title>
+
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
+
+  <style>
+    html, body { margin:0; height:100%; overflow:hidden; background:#000; }
+
+    #ui-overlay{
+      position: fixed;
+      left: 50%;
+      bottom: 18px;
+      transform: translateX(-50%);
+      z-index: 9999;
+      pointer-events: none;
+
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-size: 14px;
+      color: #0b1a24;
+
+      background: rgba(255,255,255,0.85);
+      border: 1px solid rgba(79,195,247,0.9);
+      padding: 10px 14px;
+      border-radius: 999px;
+      box-shadow: 0 10px 28px rgba(0,0,0,0.35);
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
+      max-width: min(92vw, 520px);
+      text-align: center;
+    }
+    #ui-overlay b{ color:#006aa6; }
+  </style>
+</head>
+
+<body>
+  <div id="ui-overlay">🤏 <b>Pincez</b> pour zoomer · ☝️ <b>Glissez</b> pour tourner</div>
+
+  <a-scene
+    embedded
+    vr-mode-ui="enabled: false"
+    arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; sourceWidth:1280; sourceHeight:960; displayWidth:1280; displayHeight:960;"
+    renderer="antialias: true; colorManagement: true; physicallyCorrectLights: true;"
+    gesture-detector
+  >
+    <a-assets>
+      <a-asset-item id="porsche-model" src="M1.glb"></a-asset-item>
+    </a-assets>
+
+    <!-- Caméra + éclairage attaché (comme un flash) -->
+    <a-entity camera>
+      <a-light type="ambient" intensity="1.4" color="#ffffff"></a-light>
+      <a-light type="directional" intensity="1.2" color="#ffffff" position="0 1 1"></a-light>
+      <a-light type="point" intensity="0.7" distance="8" decay="2" color="#ffffff" position="0 0.6 1.2"></a-light>
+    </a-entity>
+
+    <a-marker
+      preset="hiro"
+      id="marker"
+      emitevents="true"
+      smooth="true"
+      smoothCount="10"
+      smoothTolerance="0.01"
+      smoothThreshold="5"
+      cursor="fuse: false; rayOrigin: mouse;"
+    >
+      <a-entity
+        id="porsche-entity"
+        gltf-model="#porsche-model"
+        position="0 0 0"
+        scale="1 1 1"
+        class="interactable"
+        gesture-handler="minScale: 0.25; maxScale: 4"
+      ></a-entity>
+
+      <a-ring color="#4FC3F7" radius-inner="0.8" radius-outer="0.9" rotation="-90 0 0" opacity="0.65"></a-ring>
+    </a-marker>
+
+  </a-scene>
+</body>
+</html>
 
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -140,3 +225,4 @@
   </a-scene>
 </body>
 </html>
+
